--- a/index.html
+++ b/index.html
@@ -2,18 +2,32 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Panel Minecraft</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Panel Minecraft - Frontend</title>
 </head>
 <body>
-  <div class="container">
-    <h1>Panel de Comandos para Minecraft</h1>
-    <input type="text" id="cmd" placeholder="Escribe un comando...">
-    <button onclick="enviar()">Enviar</button>
-    <pre id="res"></pre>
-  </div>
-  <script src="script.js"></script>
+  <h1>🎮 Panel de Minecraft (Frontend)</h1>
+  <button onclick="iniciarServidor()">Iniciar Servidor</button>
+  <pre id="logs" style="background:#111; color:#0f0; padding:10px; height: 400px; overflow-y: scroll;"></pre>
+
+  <script>
+    function iniciarServidor() {
+      fetch('http://localhost:3000/')
+        .then(response => response.text())
+        .then(data => alert(data))
+        .catch(err => alert('Error al iniciar: ' + err));
+    }
+
+    const logBox = document.getElementById('logs');
+
+    if (!!window.EventSource) {
+      const eventSource = new EventSource('http://TU_IP_O_DOMINIO:3000/logs');
+      eventSource.onmessage = function(event) {
+        logBox.textContent += event.data + '\n';
+        logBox.scrollTop = logBox.scrollHeight;
+      };
+    } else {
+      alert('Tu navegador no soporta EventSource');
+    }
+  </script>
 </body>
 </html>
-
